fixing $VERSION so we dont override CGI::Apps

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension CGI::Application::MailPage.
 
-1.6 ()
+1.7 (May 14, 2010)
+    - Fixed problem with our $VERSION (RT #57477) - gary@sitesuite.com.au
+
+1.6 (Oct 31, 2005)
     - Fixed vulnerability where newlines could be embedded in subject, 
         name, etc and used to create a completely custom message for spammers.
         Validation is now performed by Data::FormValidator and can be customized
